--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
       <h1>Voting Info - 18 or Older</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
+
+    <p>Want more information on political parties and where you might fit into it all? Fill out the survey on this page to find out more!</p>
+    <form id="politics">
+      <label for="age">Age</label>
+      <input id="age" type="text">
+      <select id="gender">
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+      </select>
+
+      <button type="submit" class="btn">Find out your likely political affiliation!</button>
+    </form>
+
+    <div id="prediction">
+      <p>You are most likely <span id="party"></span>.</p>
+    </div>
+
+    </div>
   </div>
 
   </body>
